# CodingAgent

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
.superpowers/sdd/: task-4-report.md
config/policies/: balanced_dev.json  strict_demo.json
demos/sample_workspace/: test_calculator.py
deploy/: nginx.conf
docs/: demo-video-script.md  deployment-aliyun.md
docs/cold-start/: 2026-07-07-opencode-validation-result.md  2026-07-07-opencode-workaround.md  2026-07-07-validation-guide.md
docs/superpowers/plans/: 2026-07-07-coding-agent-harness-implementation.md  2026-07-10-real-llm-probe-implementation.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  types.ts
scripts/: export_run.py
src/coding_agent/: __main__.py  action_parser.py  agent_loop.py  api.py  approvals.py  auth.py  cli.py  credentials.py  domain.py  events.py  feedback.py  guardrails.py  llm.py  llm_probe.py  memory.py  policies.py  redaction.py  run_service.py  store.py
tests/: test_action_parser.py  test_agent_loop.py  test_api.py  test_approvals.py  test_auth.py  test_cli.py  test_command_tools.py  test_credentials_llm.py  test_distribution.py  test_domain.py  test_feedback.py  test_guardrails.py  test_llm_probe.py  test_memory.py  test_run_service.py  test_store_events.py  test_tools.py
(+9 files in other folders)
